# sap-bridge-mcp

./: LICENSE  README.md  SECURITY.md  llms.txt  pyproject.toml  server.json  server.py
.github/workflows/: scorecard.yml
tests/: test_server.py
