[project]
name = "sap-bridge-mcp"
version = "0.1.0"
description = "Bridge SAP IDoc / RFC / ABAP legacy to ONE OS — parse, map, govern (SAP GRC / SOX). CSOAI Layer-0 legacy-bridge family."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "CSOAI-ORG"}]
dependencies = ["mcp>=1.0.0", "pydantic>=2.0.0"]

[project.scripts]
sap-bridge-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["server.py"]
